--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,79 @@
-h1 {
-    color: red;
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Oswald&display=swap');
+* {
+    margin: 0;
+    padding: o;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+   background-color: rgb(25, 24, 24);
+  
+}
+section {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 80px 100px;
+    color:whitesmoke; 
+
+}
+.container {
+    position: inherit;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.main-tittle {
+    font-size: 3em;
+    margin-bottom: 50px;
+    border-bottom: 1px solid black;
+}
+span {
+    font-style:italic;
+}
+.content {
+    position: relative;
+    width: 1150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.content .image {
+    position: relative;
+    width: 800px;
+    height: 400px;
+    overflow: hidden;
+}
+img {
+    z-index: 1;
+    position: absolute;
+    top:0%;
+    left: 0;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 1% 1%;
+}
+.content .text-box {
+z-index: 222;
+background-color: rgba(255,255, 255, 0.1);
+ backdrop-filter: blur(20px);
+ padding: 10%;
+ max-width: 400px;
+border-radius: 3px;
+transform: translate(-80px, 50px);
+}
+.content .text-box h3 {
+    font-size: 2em;
+    margin-bottom: 10px;
+}
+.social-media {
+    margin-top: 100px;
+}
+.social-media a {
+    color: aliceblue;
+    font-size: 2em;
+    margin: 60px;
 }
