--- a/assets/style.css
+++ b/assets/style.css
@@ -10,6 +10,81 @@ body {
    background-color: rgb(25, 24, 24);
   
 }
+.wrapper {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+.box div {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    background-color: transparent;
+    border: 3px solid whitesmoke;
+}
+.box div:nth-child(1){
+    top: 70%;
+    left: 50%;
+    animation: animate 7s linear infinite;
+}
+.box div:nth-child(2){
+    top: 62%;
+    left: 42%;
+    animation: animate 10s linear infinite;
+}
+.box div:nth-child(3){
+    top: 42%;
+    left: 24%;
+    animation: animate 10s linear infinite;
+}
+.box div:nth-child(4){
+    top: 92%;
+    left: 52%;
+    animation: animate 10s linear infinite;
+}
+.box div:nth-child(5){
+    top: 13%;
+    left: 32%;
+    animation: animate 10s linear infinite;
+}
+.box div:nth-child(6){
+    top: 12%;
+    left: 42%;
+    animation: animate 10s linear infinite;
+}
+.box div:nth-child(7){
+    top: 92%;
+    left: 32%;
+    animation: animate 10s linear infinite;
+}
+.box div:nth-child(8){
+    top: 82%;
+    left: 52%;
+    animation: animate 10s linear infinite;
+}
+.box div:nth-child(9){
+    top: 10%;
+    left: 62%;
+    animation: animate 10s linear infinite;
+}
+.box div:nth-child(10){
+    top: 60%;
+    left: 22%;
+    animation: animate 10s linear infinite;
+}
+@keyframes animate {
+    0%{
+        transform: scale(0) translate(0) rotate(0);
+        opacity: 1;
+    }
+    100%{
+        transform: scale(1.3) translate(-200px) rotate(360deg);
+        opacity: 0;
+    }
+    
+}
+
 section {
     position: relative;
     display: flex;
