--- a/assets/style.css
+++ b/assets/style.css
@@ -18,14 +18,14 @@ body {
 }
 .box div {
     position: absolute;
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
     background-color: transparent;
     border: 3px solid whitesmoke;
 }
 .box div:nth-child(1){
     top: 70%;
-    left: 50%;
+    left: 100%;
     animation: animate 7s linear infinite;
 }
 .box div:nth-child(2){
@@ -54,7 +54,7 @@ body {
     animation: animate 10s linear infinite;
 }
 .box div:nth-child(7){
-    top: 92%;
+    top: 150%;
     left: 32%;
     animation: animate 10s linear infinite;
 }
@@ -101,16 +101,74 @@ section {
     align-items: center;
     flex-direction: column;
 }
-.main-tittle {
-    font-size: 3em;
-    color: rgba(255,255, 255, 0.1);
-    margin-bottom: 50px;
-    border-bottom: 1px solid black;
-    transform: translate(-80px, 50px);
+
+.anim-text {
+    width: max-content;
+    position: absolute;
+    top: -5%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 2em;
 }
-span {
-    font-style:italic;
+.anim-text span {
+    display: inline-block;
+    font-size: 2em;
+    font-weight: 500px;
+    -webkit-text-stroke: 1px rgba(227, 224, 221, 0.3);
+    -webkit-text-fill-color: transparent;
+    transform: translateY(100px);
+    transition: transform 1s;
 }
+.anim-text span.active {
+    transform: translateY(0px);
+}
+.anim-text span:nth-child(1) {
+    transition-delay: 0.5s;
+}
+.anim-text span:nth-child(2) {
+    transition-delay: 0.4s;
+}
+.anim-text span:nth-child(3) {
+    transition-delay: 0.3s;
+}
+.anim-text span:nth-child(4) {
+    transition-delay: 1s;
+}
+.anim-text span:nth-child(5) {
+    transition-delay: 0.1s;
+}
+.anim-text span:nth-child(6) {
+    transition-delay: 1s;
+}
+.anim-text span:nth-child(7) {
+    transition-delay: 1.1s;
+}
+.anim-text span:nth-child(8) {
+    transition-delay: 1.2s;
+}
+.anim-text span:nth-child(9) {
+    transition-delay: 1.3s;
+}
+.anim-text span:nth-child(10) {
+    transition-delay: 1.4s;
+}
+.anim-text span:nth-child(11) {
+    transition-delay: 1.5s;
+}
+.anim-text span:nth-child(12) {
+    transition-delay: 1s;
+}
+.anim-text span:nth-child(13) {
+    transition-delay: 1.7s;
+}
+.anim-text span:nth-child(14) {
+    transition-delay: 0.8s;
+}
+.anim-text span:nth-child(15) {
+    transition-delay: 1.9s;
+}
+
+
 .content {
     position: relative;
     width: 1150px;
